<resources>
    <string name="app_name">My Note 2</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Настройки</string>
    <string name="favorite">Избранное</string>
    <string name="search">Поиск</string>
    <string name="first_title">Первая заметка</string>
    <string name="first_content">Содержание первой заметки</string>
    <string name="second_title">Вторая заметка</string>
    <string name="second_content">Содержание второй заметки</string>
    <string name="third_title">Третья заметка</string>
    <string name="third_content">Содержание третьей заметки</string>
    <string name="fourth_title">Четвертая заметка</string>
    <string name="fourth_content">Содержание четвертой заметки</string>
    <string name="fifth_title">Пятая заметка</string>
    <string name="fifth_content">Содержание пятой заметки</string>
    <string name="sixth_title">Шестая заметка</string>
    <string name="sixth_content">Содержание шестой заметки</string>
    <string name="seventh_title">Седьмая заметка</string>
    <string name="seventh_content">Содержание седьмой заметки</string>
    <string name="clear">Очистить</string>
    <string name="add">Добавить</string>
    <string name="delete_one">Удалить</string>
    <string name="delete_note_dialog_title">Вы действительно хотите удалить эту заметку?</string>
    <string name="delete_note_dialog_button_no">НЕТ</string>
    <string name="confirm_delete_button">УДАЛИТЬ</string>
</resources>